# c-_miniproject

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: main.yml
dao/: AttendanceDAOSQLite.cpp  AttendanceDAOSQLite.h  DepartmentDAOSQLite.cpp  DepartmentDAOSQLite.h  EmployeeDAOSQLite.cpp  EmployeeDAOSQLite.h  IAttendanceDAO.h  IDepartmentDAO.h  IEmployeeDAO.h  IUserDAO.h  UserDAOSQLite.cpp  UserDAOSQLite.h
entities/: Attendance.h  Department.h  Employee.h  Payroll.h  User.h
service/: AttendanceService.cpp  AttendanceService.h  AuthService.cpp  AuthService.h  DepartmentService.cpp  DepartmentService.h  EmployeeService.cpp  EmployeeService.h
ui/: ConsoleUI.cpp  ConsoleUI.h
